feat: Add filterable graph component & its options

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "markdown.marp.chromePath": "/Applications/Google Chrome.app"
+  "markdown.marp.chromePath": "/Applications/Google Chrome.app",
+  "typescript.preferences.importModuleSpecifier": "non-relative"
 }
