--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,20 +30,21 @@
     "baseUrl": "./src",
     "rootDirs": ["./"],
     "paths": {
-      "~apis": ["./apis/index.ts"],
+      "~apis": ["apis/index.ts"],
       "~assets/*": ["../public/*"],
-      "~components": ["./components/index.ts"],
+      "~components": ["components/index.ts"],
       "~config": ["../config/index.ts"],
-      "~constants": ["./constants/index.ts"],
-      "~hooks": ["./hooks/index.ts"],
-      "~models": ["./models/index.ts"],
-      "~stores": ["./stores/index.ts"],
-      "~styles/*": ["./styles/*"],
-      "~utils/*": ["./utils/*"]
+      "~constants": ["constants/index.ts"],
+      "~hooks": ["hooks/index.ts"],
+      "~models": ["models/index.ts"],
+      "~stores": ["stores/index.ts"],
+      "~styles/*": ["styles/*"],
+      "~utils/*": ["utils/*"]
     }
   },
   "include": [
-    "src",
+    "src/**/*.ts",
+    "src/**/*.tsx",
     "public",
     "node_modules/**/*.d.ts",
     "node_modules/@types/**/*.d.ts"
