--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
     "html-webpack-plugin": "^5.5.0",
