--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "fork-ts-checker-webpack-plugin": "^6.5.2",
     "html-webpack-plugin": "^5.5.0",
     "interpolate-html-plugin": "^4.0.0",
+    "kubernetes-models": "^4.1.0",
     "less": "^4.1.3",
     "less-loader": "^10.2.0",
     "prettier": "^2.8.1",
