--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
-  "name": "zandi-grapher",
-  "version": "1.0.0",
-  "description": "a 2.5D graph library",
+  "name": "uncloudy-grapher",
+  "version": "0.2.0",
+  "description": "a 2.5D graph library to monitor kubernetes nodes and workloads",
   "module": "exnext",
   "main": "src/index.tsx",
   "author": "Jaycol Kim <jaycol.kim@gmail.com>",
   "license": "MIT",
   "private": false,
   "scripts": {
+    "build:plugin": "webpack -c ./.config/webpack/webpack.config.ts --env production",
+    "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
+    "test": "jest --watch --onlyChanged",
+    "test:ci": "jest --passWithNoTests --maxWorkers 4",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
+    "lint:fix": "yarn run lint --fix",
+    "e2e": "yarn exec cypress install && yarn exec grafana-e2e run",
+    "e2e:update": "yarn exec cypress install && yarn exec grafana-e2e run --update-screenshots",
+    "server": "docker-compose up --build",
+    "sign": "npx --yes @grafana/sign-plugin@latest",
     "build": "webpack --node-env=production --progress",
     "serve": "webpack serve --node-env=development --hot"
   },
   "resolutions": {
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2"
+  },
+  "engines": {
+    "node": ">=16 <20"
   },
   "devDependencies": {
     "@ant-design/icons": "^4.8.0",
@@ -24,10 +38,25 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@emotion/css": "^11.11.0",
+    "@grafana/data": "^9.5.2",
+    "@grafana/e2e": "^9.5.2",
+    "@grafana/e2e-selectors": "^9.5.2",
+    "@grafana/eslint-config": "^5.1.0",
+    "@grafana/runtime": "^9.5.2",
+    "@grafana/tsconfig": "^1.2.0-rc1",
+    "@grafana/ui": "^9.5.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@reduxjs/toolkit": "^1.9.1",
+    "@swc/core": "^1.3.60",
+    "@swc/helpers": "^0.5.1",
+    "@swc/jest": "^0.2.26",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/chart.js": "^2.9.37",
-    "@types/node": "^17.0.45",
+    "@types/jest": "^29.5.1",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.2.5",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.18",
     "@types/react-redux": "^7.1.24",
@@ -48,19 +77,25 @@
     "babel-register": "^6.26.0",
     "chart.js": "^3.9.1",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "core-js": "3.26.1",
     "css-loader": "^6.7.3",
     "eslint": "^8.30.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^4.0.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.5.2",
+    "glob": "^10.2.6",
     "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "interpolate-html-plugin": "^4.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "kubernetes-models": "^4.1.0",
     "less": "^4.1.3",
     "less-loader": "^10.2.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.8",
     "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -70,19 +105,26 @@
     "react-refresh-typescript": "^2.0.7",
     "react-router-dom": "6.6.0",
     "redux-persist": "^6.0.0",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
+    "replace-in-file-webpack-plugin": "^1.0.6",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
+    "style-loader": "^3.3.3",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.4",
+    "swc-loader": "^0.2.3",
     "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.5.2",
     "type-fest": "^2.19.0",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0",
+    "webpack": "^5.84.1",
+    "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.11.1",
+    "webpack-livereload-plugin": "^3.0.2",
     "webpack-manifest-plugin": "^4.1.1"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
